--- a/app/assets/stylesheets/components/common/standings_box.scss
+++ b/app/assets/stylesheets/components/common/standings_box.scss
@@ -26,11 +26,11 @@ $off-white: #e9ebee;
 
 .standings-box-item {
   display: flex;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  border-top: .2px rgba(51, 51, 51,.2) solid;
   padding: 5px;
 
   div {
-
     text-align: left;
   }
 
