--- a/app/assets/stylesheets/components/home/_.scss
+++ b/app/assets/stylesheets/components/home/_.scss
@@ -39,17 +39,18 @@ $white: #F6F7F9;
 
   .title {
     width: 100%;
-    line-height: 20px;
-    padding: 5px;
+    // line-height: 20px;
+    padding: 10px 5px;
     margin-bottom: 5px;
-    font-size: 20px;
+    font-size: 18px;
+    line-height: 18px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     background:-webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
   }
 
   div {
-    padding: 5px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    padding: 10px 5px;
+    // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     font-size: 15px;
   }
 }
