--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -11,39 +11,35 @@ $white: #F6F7F9;
   position: relative;
   border-radius: 5px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-}
 
-.pool-list-item {
-  width: 100%;
-  padding: 5px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  .pool-list-item {
+    width: 100%;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: .25s;
 
-  p {
-    transition: .5s;
-    cursor: pointer;
+    div {
+      width: 100%;
+      padding: 10px 5px;
+      font-size: 15px;
+      cursor: pointer;
+    }
+  }
+
+  .pool-list-item:hover {
+      box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    }
+
+  .pool-list-top-item {
+    padding: 10px 5px;
+    font-size: 18px;
+    line-height: 18px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    background:-webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE))
   }
 }
 
-.pool-list-item:hover {
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-}
-
-.pool-list-top-item {
-  // margin-top: 10px;
+.pool-form {
+  width: 100%;
   padding: 5px;
-  // padding-bottom: 5px;
-  // border-bottom: .2px $off-white solid;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  background:-webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE))
 }
-
-// .pool-list-title {
-//   position: absolute;
-//   top: 2px;
-//   left: 2px;
-//   padding-left: 5px;
-//   padding-top: 5px;
-//   line-height: 15px;
-//   font-size: 15px;
-//   opacity: .5;
-// }
