--- a/app/assets/stylesheets/components/pool/_.scss
+++ b/app/assets/stylesheets/components/pool/_.scss
@@ -30,26 +30,30 @@ $drk-text: #CDCDCD;
 .pool-message {
   margin-bottom: 10px;
   padding: 5px;
-  padding-bottom: 5px;
   background: white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  border-radius: 5px;
+  border-radius: 2px;
   display: flex;
   flex-direction: column;
   justify-content: center;
 
   .title {
     width: 100%;
-    padding: 5px;
-    margin-bottom: 5px;
-    font-size: 20px;
+    padding: 10px 5px;
+    margin-bottom: 10px;
+    font-size: 18px;
+    line-height: 18px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     background:-webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
   }
 
   div {
-    padding: 5px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    padding-bottom: 10px;
+    padding-left: 5px;
     font-size: 15px;
+  }
+
+  div:last-child{
+    padding-bottom: 5px;
   }
 }
