--- a/app/assets/stylesheets/components/pool/chat_box.scss
+++ b/app/assets/stylesheets/components/pool/chat_box.scss
@@ -13,10 +13,10 @@ $white: #F6F7F9;
 
   h2 {
     width: 100%;
-    padding: 5px;
-    line-height: 20px;
+    padding: 10px 5px;
+    line-height: 18px;
     margin-bottom: 5px;
-    font-size: 20px;
+    font-size: 18px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     background:-webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
   }
