--- a/app/assets/stylesheets/components/pool/mod_board.scss
+++ b/app/assets/stylesheets/components/pool/mod_board.scss
@@ -7,7 +7,9 @@
 
   h2 {
     width: 100%;
-    padding: 5px;
+    font-size: 18px;
+    line-height: 18px;
+    padding: 10px 5px;
     margin-bottom: 5px;
     border-radius: 0px;
     font-size: 20px;
@@ -22,7 +24,7 @@
   }
 
   .modboard-container {
-    height: 116px;
+    height: 118px;
     overflow-y: scroll;
 
     .modboard-item {
