--- a/app/assets/stylesheets/components/picks/_.scss
+++ b/app/assets/stylesheets/components/picks/_.scss
@@ -5,41 +5,40 @@ $drk-text: #CDCDCD;
 
 .picks-container {
   height: 100%;
+  // min-height: 600px;
+  width: 50%;
   padding: 10px 0px;
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  justify-content: space-between;
+  align-items: center;
   background: $off-white;
 
-  .picks-left {
+  .picks-left, .picks-right {
     position: relative;
     display: flex;
     flex-direction: column;
 
     button {
-      font-size: 18px;
-      padding: 5px;
-      // margin-bottom: 5px;
+      font-size: 25px;
+      margin-bottom: 10px;
       display: flex;
       justify-content: flex-start;
       align-items: center;
-      // background: white;
     }
 
     .picks-selection-container {
-      width: 292px;
-      margin-bottom: 10px;
+      width: 311px;
       display: flex;
       flex-wrap: wrap;
       overflow-y: scroll;
-      // background: white;
     }
 
     .selection-item {
       display: flex;
       flex-direction: row;
       height: 50px;
-      margin: 5px;
+      margin-right: 20px;
+      margin-bottom: 20px;
 
 
       img {
@@ -59,19 +58,16 @@ $drk-text: #CDCDCD;
 
     .picks-form {
       position: absolute;
-      top: 3px;
+      top: 4px;
       left: -35px;
       display: flex;
       flex-direction: column;
-      // background: white;
 
       button {
-        width: 25px;
-        padding-bottom: 5px;
-        font-size: 15px;
+        font-size: 20px;
         cursor: pointer;
-        // border-bottom: .2px rgba(51, 51, 51,.2) solid;
         transition: .5s;
+        // border-bottom: .2px rgba(51, 51, 51,.2) solid;
       }
 
       button:hover {
