--- a/app/assets/stylesheets/components/footer/_.scss
+++ b/app/assets/stylesheets/components/footer/_.scss
@@ -3,7 +3,7 @@ $lt-primary: #2d2d2d;
 $drk-text: #CDCDCD;
 
 .footer-container {
-  height: 50px;
+  min-height: 50px;
   width: 100%;
   display: flex;
   justify-content: center;
