--- a/app/assets/stylesheets/components/picks/_.scss
+++ b/app/assets/stylesheets/components/picks/_.scss
@@ -5,7 +5,6 @@ $drk-text: #CDCDCD;
 
 .picks-container {
   height: 100%;
-  // min-height: 600px;
   width: 50%;
   padding: 10px 0px;
   display: flex;
@@ -24,6 +23,11 @@ $drk-text: #CDCDCD;
       display: flex;
       justify-content: flex-start;
       align-items: center;
+      transition: .5s;
+    }
+
+    button:hover {
+      color: red;
     }
 
     .picks-selection-container {
