--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -32,13 +32,44 @@ $white: #F6F7F9;
   border-radius: 5px;
   padding-top: 30px;
 
-  .pool-list-top-item {
+  .pool-list-top {
+    width: 100%;
     position: absolute;
     top: 0px;
     left: 10px;
+    display: flex;
+    justify-content: space-between;
     font-size: 20px;
-    text-align: left;
-    opacity: .5;
+
+    .pool-list-top-title {
+      // width: 300px;
+      font-weight: bold;
+      opacity: .5;
+    }
+
+    .pool-list-top-buttons {
+      display: flex;
+      width: 220px;
+      display: flex;
+      justify-content: space-between;
+
+      button {
+      height: 30px;
+      margin-top: 5px;
+      width: 100px;
+      margin-bottom: 1px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 12px;
+      line-height: 12px;
+      border-radius: 2px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+      background: $lt-primary;
+      transition: .2s;
+      color: white;
+      }
+    }
   }
 
   .pool-list-item {
@@ -131,9 +162,8 @@ $white: #F6F7F9;
   .pool-join-form {
     width: 200px;
     position: absolute;
-    bottom: 40px;
-    // left: -205px;
-    left: -205px;
+    top: 0px;
+    right: -225px;
     padding: 5px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
