--- a/app/assets/stylesheets/components/leaderboard/_.scss
+++ b/app/assets/stylesheets/components/leaderboard/_.scss
@@ -1,14 +1,16 @@
 .leaderboard-container {
-  min-width: 870px;
-  width: 95%;
+  // min-width: 870px;
+  width: 100%;
   min-height: 75vh;
-  padding: 20px 0px;
+  padding: 20px;
   display: flex;
   position: relative;
   flex-direction: column;
-  justify-content: flex-start;
+  // justify-content: flex-start;
+  overflow-x: auto;
 
   .leaderboard-banner {
+    width: 1300px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -26,6 +28,7 @@
   }
      
   .leaderboard-labels {
+    width: 1300px;
     margin-bottom: 5px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -58,6 +61,7 @@
   }
 
   .leaderboard-body {
+    width: 1300px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
