--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -251,4 +251,30 @@
             line-height: 35px;
             width: 870px;
           }
+        .action-call {
+            width: 140px;
+            height: 40px;
+            margin-top: 25px;
+            border-radius: 2px;
+            font-size: 20px;
+            font-weight: bold;
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
+            justify-content: center;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            align-items: center;
+            background: white;
+            border: 1px black solid;
+            -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+            &:hover {
+                background: $drk-primary;
+                color: white;
+                border: none;
+            }
+        }
     }
